<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/centralize"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        map:layout_constraintBottom_toTopOf="@+id/story_detail"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        tools:context=".StoryDetailsWithMapActivity" />

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        map:layout_constraintBottom_toBottomOf="@+id/map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/gray"
        map:layout_constraintTop_toTopOf="@+id/map">

        <ImageView
            style="@style/TitleAsIcon"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/not_found"
            android:src="@drawable/ic_baseline_error_outline_24"
            android:tint="@android:color/darker_gray"
            tools:ignore="UseAppTint" />

        <TextView
            style="@style/Paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_location" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/story_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/story_image"
                android:id="@+id/post_image"
                style="@style/ImagePost"
                android:src="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/post_username"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:lines="1"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/post_date"
                    style="@style/Paragraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

            </LinearLayout>

            <TextView
                android:ellipsize="end"
                android:id="@+id/post_description"
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:lines="6"
                android:text="@string/description_hint" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
